--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="website">
         <header>
             <div class="logo">
-                <img src="img/web logo.webp" alt="Martin s.r.o.">
+                <img src="img/weblogo.webp" alt="Dominik s.r.o.">
             </div>
             <nav>
                 <ul>
