--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec purus nec nunc tincidunt ultricies. Nullam nec purus nec nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec purus nec nunc tincidunt ultricies. Nullam nec purus nec nunc</p>
         </div>
 
-    </div>
+        <div class="heading">
+            <h2>Proč si vybrat naše produkty?</h2>
+            <p>Naše firma nabízí nejvyšší kvalitu dřeva a naše produkty jsou na míru Vašim potřebám.</p>
+        </div>
 
 </body>
 </html>
