--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <h2>Proč si vybrat naše produkty?</h2>
             <p>Naše firma nabízí nejvyšší kvalitu dřeva a naše produkty jsou na míru Vašim potřebám.</p>
         </div>
-
+        <div class="feature">
+            <h3>Rychlé dodání</h3>
+            <p>Naše zboží doručíme do 24 hodin, pokud je skladem.</p>
+        </div>
 </body>
 </html>
