--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <h2>Proč si vybrat naše produkty?</h2>
             <p>Naše firma nabízí nejvyšší kvalitu dřeva a naše produkty jsou na míru Vašim potřebám.</p>
         </div> 
+        <div class="features">
             <div class="feature">
                 <h3>Rychlé dodání</h3>
                 <p>Naše zboží doručíme do 24 hodin, pokud je skladem.</p>
@@ -53,5 +54,6 @@
                 <p>Naše produkty jsou na míru Vašim potřebám. Můžeme Vám dle Vašeho přání přizpůsobit jakýkoliv produkt.</p>
             </div>
         </div>
+    </div>
 </body>
 </html>
