--- a/index.html
+++ b/index.html
@@ -4,13 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Dominik m</title>
+    <title>Dominik s.r.o.</title>
 </head>
 <body>
-    <div id="website">
-        <!-- ... existing code ... -->
 
-        <!-- Oprava struktury features sekce -->
+    <div id="website">
+        <header>
+            <div class="logo">
+                <img src="img/th.jpg" alt="Dominik s.r.o.">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Úvod</a></li>
+                    <li><a href="#">Produkty</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="banner">
+            <div class="banner-image">
+            </div>
+            <div class="banner-text">
+                <h1>Vítejte na naší webové stránce</h1>
+                <p>Nabízíme nejvyšší kvalitu dřeva</p>
+            </div>
+        </div>
+
+        <div class="heading">
+            <h2>Proč si vybrat naše produkty?</h2>
+            <p>Naše firma nabizi nejvyšší kvalitu dřeva a nasš produkty jsou na míru Vašim potřebám.</p>
+        </div>
         <div class="features">
             <div class="feature">
                 <h3>Rychlé dodání</h3>
@@ -24,67 +48,64 @@
                 <h3>Produkty na míru</h3>
                 <p>Naše produkty jsou na míru Vašim potřebám. Můžeme Vám dle Vašeho přání přizpůsobit jakýkoliv produkt.</p>
             </div>
-        </div>
-
-        <div class="heading theme-primary">
-            <h2>Zaujali jsme Vás?</h2>
-            <button class="btn">Kontaktujte nás</button>
-        </div>
-
-        <!-- Oprava struktury produktové sekce -->
-        <div class="heading">
-            <h2>Naše produkty a služby</h2>
-            <p>Vyberte si z naší nabídky produktů.</p>
-        </div>
-
-        <section class="products">
-            <div class="product">
+            <div class="heading theme-primary">
+                <h2>Zaujali jsme Vás?</h2>
+                <button class="btn">Kontaktujte nás</button>
+            </div>
+            <div class="heading">
+                <h2>Naše produkty a služby</h2>
+                <p>Vyberte si z naší nabídky produktů.</p>
+            </div>
+            <div class="product section">
                 <div class="product-info">
                     <h2>Dubový masivní stůl</h2>
-                    <p>Masivní dubový stůl o rozměrech 800×1200 mm je dostupný v několika variantách.</p>
+                    <p>Masivní dubový stůl o rozměrech 800x1200 mm je dostupný v několika variantách.</p>
                 </div>
                 <div class="product-image">
-                    <img src="img/stul.webp" alt="Dubový masivní stůl">
+                    <img src="img/Fringe.jpg" alt="Dubový masivní stůl">
                 </div>
-            </div>
 
-            <div class="product reverse">
-                <div class="product-info">
-                    <h2>Dubový masivní stůl</h2>
-                    <p>Masivní dubový stůl o rozměrech 800×1200 ..</p>
-                </div>
-                <div class="product-image">
-                    <img src="img/banerbg.jpg" alt="Dubový masivní stůl">
-                </div>
-            </div>
-        </section>
 
-        <!-- Oprava struktury kontaktní sekce -->
-        <section class="contact" id="kontakt">
-            <div class="contact-box">
-                <h2>Kontaktní adresa</h2>
-                <p>WoodMaster s.r.o.</p>
-                <p>Studentská náměstí 1154</p>
-                <p>68501 Uherské Hradiště</p>
             </div>
-            
-            <div class="contact-box">
-                <h2>Kontaktujte nás</h2>
-                <p><a href="mailto:info@woodmaster.com">info@woodmaster.com</a></p>
-                <p><a href="tel:+420123456789">+420 123 456 789</a></p>
+        </div>
+        <div class="product section reverse">
+            <div class="product-info">
+                <h2>Dubový masivní stůl</h2>
+                <p> Dubový masivní stůl je vysoce kvalitní kus nábytku vyrobený z masivního dubového dřeva. Dub je známý svou pevností, odolností a dlouhou životností, což z něj činí ideální materiál pro stoly. Masivní stůl z dubu má často přírodní kresbu dřeva, která dodává interiéru eleganci a nadčasový vzhled. Může být ošetřen olejem, lakem nebo voskem pro zvýšení odolnosti vůči vlhkosti a mechanickému opotřebení. Díky své robustnosti je vhodný jak do domácností, tak do restaurací či kanceláří.
+                </p>
             </div>
-            
-            <div class="contact-box">
-                <h2>Sledujte nás</h2>
-                <div class="social-icons">
-                    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from All by undefined - undefined --><path fill="currentColor" d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4zm9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3"/></svg></svg></a>
-                    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from All by undefined - undefined --><path fill="currentColor" d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95"/></svg></svg></a>
-                    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from All by undefined - undefined --><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="m3 21l7.548-7.548M21 3l-7.548 7.548m0 0L8 3H3l7.548 10.452m2.904-2.904L21 21h-5l-5.452-7.548" color="currentColor"/></svg></svg></a>
-                </div>
+            <div class="product-image">
+                <img src="img/03-7.jpg" alt="Dubový masivní stůl">
             </div>
-        </section>
+        </div>
+
+
+
     </div>
-    <!-- Map Section -->
+    <section class="contact" id="kontakt">
+        <div class="contact-box">
+            <h2>Kontaktní adresa</h2>
+            <p>WoodMaster s.r.o.</p>
+            <p>Studentská náměstí 1154</p>
+            <p>68501 Uherské Hradiště</p>
+        </div>
+
+        <div class="contact-box">
+            <h2>Kontaktujte nás</h2>
+            <p><a href="mailto:info@woodmaster.com">info@woodmaster.com</a></p>
+            <p><a href="tel:+420123456789">+420 236 598 456</a></p>
+        </div>
+
+        <div class="contact-box">
+            <h2>Sledujte nás</h2>
+            <div class="social-icons">
+                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from All by undefined - undefined --><path fill="currentColor" d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4zm9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3"/></svg></a>
+                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from All by undefined - undefined --><path d="M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2m13 2h-2.5A3.5 3.5 0 0 0 12 8.5V11h-2v3h2v7h3v-7h3v-3h-3V9a1 1 0 0 1 1-1h2V5z" fill="currentColor"/></svg></a>
+                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from All by undefined - undefined --><g fill="currentColor"><path d="M1 2h2.5L3.5 2h-2.5zM5.5 2h2.5L7.2 2h-2.5z"><animate fill="freeze" attributeName="d" dur="0.4s" values="M1 2h2.5L3.5 2h-2.5zM5.5 2h2.5L7.2 2h-2.5z;M1 2h2.5L18.5 22h-2.5zM5.5 2h2.5L23 22h-2.5z"/></path><path d="M3 2h5v0h-5zM16 22h5v0h-5z"><animate fill="freeze" attributeName="d" begin="0.4s" dur="0.4s" values="M3 2h5v0h-5zM16 22h5v0h-5z;M3 2h5v2h-5zM16 22h5v-2h-5z"/></path><path d="M18.5 2h3.5L22 2h-3.5z"><animate fill="freeze" attributeName="d" begin="0.5s" dur="0.4s" values="M18.5 2h3.5L22 2h-3.5z;M18.5 2h3.5L5 22h-3.5z"/></path></g></svg></a>
+            </div>
+        </div>
+    </section>
+</div>
 <div class="map-section">
     <iframe        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1482.11258247947!2d17.47352808648247!3d49.071593966832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713144138cbdae9%3A0xd3d4ac020fc270db!2zTcSbc3RhIE1heWVuIDE1MzYsIDY4NiAwMSBVaGVyc2vDqSBIcmFkacWhdMSbIDE!5e0!3m2!1sen!2scz!4v1741174167333!5m2!1sen!2scz" 
         width="100%" 
@@ -95,5 +116,6 @@
         referrerpolicy="no-referrer-when-downgrade">
     </iframe>
 </div>
+
 </body>
 </html>
